--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #121212;
+  background-color: #f69a54;
   color: #e0e0e0;
   font-family: 'Poppins', sans-serif;
   line-height: 1.6;
@@ -13,7 +13,7 @@ body {
 
 header {
   padding: 20px;
-  background: #1e1e1e;
+  background: rgb(0, 66, 0);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,7 +40,7 @@ main {
 }
 
 .card {
-  background: #1e1e1e;
+  background: rgb(0, 29, 29);
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 0 10px #000;
@@ -80,7 +80,7 @@ main {
 footer {
   text-align: center;
   padding: 15px;
-  background: #1e1e1e;
+  background: #718000;
   margin-top: 40px;
   font-size: 0.9rem;
 }
